# epitech_archive

2020_2021/B-YEP-400-NCY-4-1-indiestudio-samuel.palmer/: CMakeLists.txt  Doxyfile  Doxyfile.bak  clean_project.sh
2020_2021/B-YEP-400-NCY-4-1-indiestudio-samuel.palmer/.github/workflows/: cmake.yml
2020_2021/B-YEP-400-NCY-4-1-indiestudio-samuel.palmer/docs/html/: Bomb_8hpp_source.html  Bonus_8hpp_source.html  Camera_8hpp_source.html  CharactersChoice_8hpp_source.html  Core_8hpp_source.html  Crate_8hpp_source.html  End_8hpp_source.html  Event_8hpp_source.html  Fire_8hpp_source.html  GameVariable_8hpp_source.html  Game_8hpp_source.html  IA_8hpp_source.html  IScene_8hpp_source.html  Map_8hpp_source.html  Menu_8hpp_source.html  Model_8hpp_source.html  Music_8hpp_source.html  Options_8hpp_source.html  Player_8hpp_source.html  Save_8hpp_source.html  Scene_8hpp_source.html  Scoreboard_8hpp_source.html  annotated.html  (+103 more)
2020_2021/B-YEP-400-NCY-4-1-indiestudio-samuel.palmer/include/: Bomb.hpp  Bonus.hpp  Camera.hpp  CharactersChoice.hpp  Core.hpp  Crate.hpp  End.hpp  Event.hpp  Fire.hpp  Game.hpp  GameVariable.hpp  IA.hpp  IScene.hpp  Map.hpp  Menu.hpp  Model.hpp  Music.hpp  Options.hpp  Player.hpp  Save.hpp  Scene.hpp  Scoreboard.hpp  Skybox.hpp  Sound.hpp  Sprite.hpp  Text.hpp  Window.hpp
2020_2021/B-YEP-400-NCY-4-1-indiestudio-samuel.palmer/map/: map1.txt  map2.txt  map3.txt  map4.txt
2020_2021/B-YEP-400-NCY-4-1-indiestudio-samuel.palmer/saves/: artwork.txt  char.txt  last.txt  settings.txt  winner.txt
2020_2021/B-YEP-400-NCY-4-1-indiestudio-samuel.palmer/src/: main.cpp
(+1317 files in other folders)
